Fix responsive layout issues

--- a/style/home_style.css
+++ b/style/home_style.css
@@ -6,7 +6,8 @@
 
 }
 
-html, body {
+html,
+body {
     max-width: 100%;
     overflow-x: hidden;
 }
@@ -464,10 +465,11 @@ p {
 
 .section5 {
     margin-left: 150px;
-    width: 1100px;
+    width: 80%;
     height: 500px;
     margin-bottom: 150px;
-    background-image: url(../image/neew\ sec.jpg);
+
+    background-image: url(../image/s5.PNG);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -475,8 +477,7 @@ p {
 
 .section5 .list {
     padding-top: 60px;
-    margin-left: auto;
-    margin-right: 0;
+    float: right;
 }
 
 
@@ -529,8 +530,6 @@ body {
 }
 
 
-
-
 .prev-button,
 .next-button {
     position: absolute;
@@ -548,12 +547,12 @@ body {
 
 .prev-button {
     left: -70px;
-    /* ابعد شويه */
+
 }
 
 .next-button {
     right: -70px;
-    /* ابعد شويه */
+
 }
 
 
@@ -606,10 +605,14 @@ body {
     margin-right: 40px;
 }
 
-.footer .prt2,
-.prt3,
-.prt4 {
-    margin-left: 250px;
+
+.footer .prt2 {
+ margin-left: 150px;
+}
+
+.footer .prt4,
+.prt3{
+    margin-left: 220px;
 }
 
 
@@ -621,11 +624,7 @@ body {
 
 
 
-
-
 @media (max-width:820px) {
-
-
 
     .contener {
         width: 100%;
@@ -756,7 +755,7 @@ body {
     }
 
     .section5 {
-    overflow: hidden;
+        overflow: hidden;
         width: 80%;
         margin: 0%;
         margin-left: 10%;
@@ -801,7 +800,7 @@ body {
     }
 
     .footer {
-      overflow: hidden;
+        overflow: hidden;
         flex-direction: column;
     }
 
@@ -838,4 +837,3 @@ body {
 
 
 
-@media (max-width:550px) {}
